# DesignPatterns

./: LazySingleton.cpp  Singleton.cpp
Abstract Factory/: AbstractFactory.cpp  AbstractFactory.h
Adapter/: Adapter.h  Clist.h  List.h  List.ipp  Stack.h  main.cpp
AudioEditor/: AudioEditor  CMakeLists.txt  README_PATTERNS.md  log.txt  main.cpp  main_cli.cpp  tempCodeRunnerFile.cpp
AudioEditor/Core/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioProject.cpp  AudioProject.h  AudioProjectBuilder.cpp  AudioProjectBuilder.h  AudioTrack.cpp  AudioTrack.h  CompositeLogger.cpp  ConsoleLogger.cpp  ConsoleLogger.h  Constants.h  EffectFactory.cpp  EffectFactory.h  Error.h  FileLogger.cpp  FileLogger.h  ILogger.h  Logger.cpp  Logger.h
AudioEditor/Core/Adapters/: AudioFileAdapter.cpp  AudioFileAdapter.h  Mp3.cpp  Mp3.h  Wav.cpp  Wav.h
AudioEditor/Core/Commands/: ApplyEffect.cpp  ApplyEffect.h  CommandHistory.cpp  CommandHistory.h  EffectCommands.cpp  EffectCommands.h  EffectState.h  EffectStateCommand.cpp  EffectStateCommand.h  ICommand.h
AudioEditor/Core/Effects/: Echo.cpp  Echo.h  Fade.cpp  Fade.h  IEffect.h  Normalize.cpp  Normalize.h  Reverb.cpp  Reverb.h  Speed.cpp  Speed.h  Volume.cpp  Volume.h
AudioEditor/Core/Logging/: CompositeLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h
AudioEditor/Core/Services/: CaptionParser.cpp  CaptionParser.h
AudioEditor/GUI/: AudioEngine.cpp  AudioEngine.h  CaptionPanel.cpp  CaptionPanel.h  EffectWidget.cpp  EffectWidget.h  EffectsPanel.cpp  EffectsPanel.h  MainWindow.cpp  MainWindow.h  TransportBar.cpp  TransportBar.h  WaveformWidget.cpp  WaveformWidget.h
AudioEditor/SRT/: Arctic-Monkeys-Do-I-Wanna-Know-(Official-Video).srt
Bridge/: Device.cpp  Device.h  Remote.cpp  Remote.h  main  main.cpp
Builder/: Builder.cpp  Builder.h
ChainOfResp/: ATM.cpp  ATM.h  CashHandler.cpp  CashHandler.h  main  main.cpp
Command/: Command.cpp  Command.h  GameController.h  Player.cpp  Player.h  main  main.cpp
Composite/: Button.cpp  Button.h  Component.cpp  Component.h  Label.cpp  Label.h  Panel.cpp  Panel.h  main.cpp
Decorator/: Beverage.h  BeverageDecorator.cpp  BeverageDecorator.h  Coffee.cpp  Coffee.h  Milk.cpp  Milk.h  Sugar.cpp  Sugar.h  WhippedCream.cpp  WhippedCream.h  main  main.cpp
Facade/: Delivery.h  Order.h  Payment.h  PlaceOrder.h  Shopkeeper.h  main  main.cpp
Factory/: Factory.cpp  Factory.h
Observer/: Auction.cpp  Auction.h  Bidders.h  Observer.h  main  main.cpp
Prototype/: Prototype.cpp  Prototype.h
State/: DispensingState.h  HasMoneyState.h  NoItemState.h  NoMoneyState.h  State.h  VendingMachine.h  main  main.cpp
